<resources>
 <string name="app_name">vReport</string>

 <string name="title_activity_welcome">Home Screen</string>
 <string name="facebook_app_id">1836790076569540</string>

 <string name="API_Key">AIzaSyDMbsANYcgtck59CLiFeSLj3aMk8GDDRnY</string>

 <string name="next">NEXT</string>
 <string name="skip">SKIP</string>
 <string name="start">GOT IT</string>

 <string name="slide_1_title">Hello Food!</string>
 <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

 <string name="slide_2_title">Movie Tickets</string>
 <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

 <string name="slide_3_title">Great Discounts</string>
 <string name="slide_3_desc">Best discounts on every single service we offer!</string>

 <string name="slide_4_title">World Travel</string>
 <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

 <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
 <string name="play_again">Play Again</string>
 <string name="title_activity_login">Sign in</string>

 <!-- Strings related to login -->
 <string name="prompt_email">Email</string>
 <string name="prompt_phoneNo">Phone Number</string>
 <string name="prompt_password">Password</string>
 <string name="action_sign_in">Login</string>
 <string name="action_register">Register</string>
 <string name="action_sign_in_short">Sign in</string>
 <string name="error_invalid_email">This email address is invalid</string>
 <string name="error_invalid_phoneNo">This phone number is invalid</string>
 <string name="error_invalid_password">This password is too short</string>
 <string name="error_incorrect_password">This password is incorrect</string>
 <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
 <string name="title_activity_home">vReport</string>

 <string name="navigation_drawer_open">Open navigation drawer</string>
 <string name="navigation_drawer_close">Close navigation drawer</string>

 <string name="action_settings">Settings</string>
 <string name="commentHint">Add report details here.</string>
 <string name="dialogText">Please check your internet connection!</string>'

 <!--For Ramotion Layout-->
 <string name="order_id_mock" translatable="false"># 1234–5678</string>
 <string name="price_mock" translatable="false">$25</string>
 <string name="requests_count_mock" translatable="false">5</string>
 <string name="requests_count_badge" translatable="false">REQUESTS</string>
 <string name="weight_mock" translatable="false">50 oz</string>
 <string name="weight_badge" translatable="false">WEIGHT</string>
 <string name="pledge_mock" translatable="false">$150</string>
 <string name="pledge_badge" translatable="false">PLEDGE</string>
 <string name="sender_badge" translatable="false">SENDER</string>
 <string name="client_name_mock" translatable="false">Edward Norton</string>
 <string name="rating_mock" translatable="false">(26)</string>
 <string name="from_badge" translatable="false">FROM</string>
 <string name="to_badge" translatable="false">TO</string>
 <string name="delivery_date_badge" translatable="false">DELIVERY DATE</string>
 <string name="delivery_time_mock" translatable="false">6:30 pm</string>
 <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
 <string name="deadline_badge" translatable="false">REQUEST DEADLINE</string>
 <string name="deadline_time_mock" translatable="false">24 minutes</string>
 <string name="request_btn_text" translatable="false">REQUEST</string>
 <string name="btn_annotation_mock" translatable="false">5 people have endorsed this</string>
 <string name="content_from1_mock">W 90th St</string>
 <string name="content_from2_mock">New York, NY 10025</string>
 <string name="content_to1_mock">46th Ave</string>
 <string name="content_to2_mock">Woodside, NY 11101</string>
 <string name="title_activity_main2">Main2Activity</string>
 <string name="title_activity_maps">Map</string>


 <string name="category_prompt">Select Category</string>
 <string name="pick_time">Time</string>
 <string name="prompt_username">User Name</string>
 <string name="prompt_Fname">First Name</string>
 <string name="prompt_Lname">Last Name</string>
 <string name="prompt_Cpassword">Confirm Password</string>
 <string-array name="category_arrays">
  <item>Search by Category...</item>
  <item>Traffic Problem</item>
  <item>Civic Issue</item>
  <item>Crime Accident </item>
  <item>Hazard Issue</item>
  <item>Weather Condition</item>
  <item>All Category</item>
 </string-array>

</resources>